--- a/app/src/main/res/layout/header_nav.xml
+++ b/app/src/main/res/layout/header_nav.xml
@@ -1,23 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
-    
     <data>
         <variable
             name="usuario"
             type="com.example.e2dy.vegetariano_fuerte.models.Usuario"/>
     </data>
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-    
         >
-    
         <ImageView
             android:id="@+id/banner"
             android:layout_width="match_parent"
@@ -25,29 +20,24 @@
             android:background="#333333"
             app:imgUrl="@{usuario.imagenBanner}"
             />
-    
         <ImageView
             android:id="@+id/profile"
             android:layout_width="@dimen/head_profile"
             android:layout_height="@dimen/head_profile"
             android:background="#444444"
-            android:layout_margin="10dp"
+            android:layout_margin="@dimen/dimens_diez"
             android:layout_alignBottom="@id/banner"
             app:imgUrl="@{usuario.imagen}"
             />
-    
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#ffffff"
-            android:padding="10dp"
+            android:padding="@dimen/dimens_diez"
             android:layout_toRightOf="@id/profile"
             android:layout_alignBottom="@id/profile"
             tools:text="Nombre Usuario"
             android:text="@{usuario.nombre}"
-    
             />
-    
-    
     </RelativeLayout>
 </layout>
