--- a/app/src/main/res/layout/template_receta.xml
+++ b/app/src/main/res/layout/template_receta.xml
@@ -1,117 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
-
-
     <data>
         <variable
             name="receta"
             type="com.example.e2dy.vegetariano_fuerte.models.Receta"/>
-
     </data>
-
-
     <RelativeLayout
     android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="end" >
-
         <ImageView
             android:id="@+id/imagen_receta"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginTop="@dimen/dimens_diez"
+            android:layout_marginRight="@dimen/dimens_diez"
+            android:layout_marginLeft="@dimen/dimens_diez"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:background="@drawable/borde"
-            android:elevation="5dp"
+            android:layout_height="@dimen/height_imagen_receta"
+            android:elevation="@dimen/elevation_fab"
             app:imgUrl="@{receta.imagen}"
-
+            android:scaleType="centerCrop"
             />
-
+        <ImageView
+            android:id="@+id/imagen_borde"
+            android:layout_marginTop="@dimen/dimens_diez"
+            android:layout_marginRight="@dimen/dimens_diez"
+            android:layout_marginLeft="@dimen/dimens_diez"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_imagen_receta"
+            android:elevation="@dimen/elevation_fab"
+            android:scaleType="centerCrop"
+            android:src="@drawable/borde"
+            />
         <TextView
             android:id="@+id/nombre_receta"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginRight="@dimen/dimens_diez"
+            android:layout_marginLeft="@dimen/dimens_diez"
             android:text="@{receta.nombre}"
             tools:text="Pasta Napolitana"
             android:layout_below="@id/imagen_receta"
             android:textColor="#000000"
-            android:textSize="22dp"/>
-
+            android:textSize="@dimen/tamaño_texto_receta"
+            android:fontFamily="serif"
+            android:textStyle="bold"
+            />
         <ImageView
             android:id="@+id/ictipo"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="@dimen/tamaño_icono_grid"
+            android:layout_height="@dimen/tamaño_icono_grid"
             android:src="@drawable/ic_tipo"
             android:layout_below="@id/nombre_receta"
-            android:layout_marginLeft="11dp"
-            />
+            android:layout_marginLeft="@dimen/margin_left_image"
             />
         <TextView
             android:id="@+id/tipo_receta"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="11dp"
-            android:layout_marginLeft="5dp"
-            android:text="@{receta.nombre}"
+            android:layout_marginRight="@dimen/margin_rigth_text"
+            android:layout_marginLeft="@dimen/margin_left_text"
+            android:text="@{receta.tipo}"
             tools:text="Vegetariana"
             android:layout_below="@id/nombre_receta"
             android:layout_toRightOf="@+id/ictipo"
             android:textColor="@color/colorPrimary"
-            android:textSize="18dp"
+            android:textSize="@dimen/tamaño_letra_grid"
             />
         <ImageView
             android:id="@+id/icdificultad"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="@dimen/tamaño_icono_grid"
+            android:layout_height="@dimen/tamaño_icono_grid"
             android:src="@drawable/ic_dificultad"
             android:layout_below="@id/ictipo"
-            android:layout_marginLeft="11dp"
+            android:layout_marginLeft="@dimen/margin_left_image"
             />
-
         <TextView
             android:id="@+id/dificultad_receta"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="11dp"
-            android:layout_marginLeft="5dp"
+            android:layout_marginRight="@dimen/margin_rigth_text"
+            android:layout_marginLeft="@dimen/margin_left_text"
             android:text="@{receta.dificultad}"
             tools:text="Facil"
             android:layout_below="@id/tipo_receta"
             android:layout_toRightOf="@+id/icdificultad"
             android:textColor="#FF0000"
-            android:textSize="17dp"
+            android:textSize="@dimen/tamaño_letra_grid"
             />
         <ImageView
             android:id="@+id/ictiempo"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="@dimen/tamaño_icono_grid"
+            android:layout_height="@dimen/tamaño_icono_grid"
             android:src="@drawable/ic_tiempo"
             android:layout_below="@id/icdificultad"
-            android:layout_marginLeft="11dp"
+            android:layout_marginLeft="@dimen/margin_left_image"
             />
         <TextView
             android:id="@+id/tiempo_receta"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="11dp"
-            android:layout_marginLeft="5dp"
+            android:layout_marginRight="@dimen/margin_rigth_text"
+            android:layout_marginLeft="@dimen/margin_left_text"
             android:text="@{receta.tiempo}"
             tools:text="45 min"
             android:layout_below="@id/dificultad_receta"
             android:layout_toRightOf="@id/ictiempo"
-            android:textColor="#ecb300"
-            android:textSize="16dp"
+            android:layout_alignTop="@+id/ictiempo"
+            android:textColor="#ff6d00"
+            android:textSize="@dimen/tamaño_letra_grid"
             />
-
-
-
-
     </RelativeLayout>
 </layout>
