--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#2E7D32</color>
     <color name="colorPrimaryDark">#1B5E20</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#000FFF</color>
 </resources>
