Funciona: Navegacion del menu lateral (boton hamburguesa), y navegacion hacia el detail page y lo del anterior commit

--- a/app/src/main/res/layout/template_receta.xml
+++ b/app/src/main/res/layout/template_receta.xml
@@ -9,107 +9,119 @@
             name="receta"
             type="com.example.e2dy.vegetariano_fuerte.models.Receta"/>
     </data>
-    <RelativeLayout
-    android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="end" >
-        <ImageView
-            android:id="@+id/imagen_receta"
-            android:layout_marginTop="@dimen/dimens_diez"
-            android:layout_marginRight="@dimen/dimens_diez"
-            android:layout_marginLeft="@dimen/dimens_diez"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/height_imagen_receta"
-            android:elevation="@dimen/elevation_fab"
-            app:imgUrl="@{receta.imagen}"
-            android:scaleType="centerCrop"
-            />
-        <ImageView
-            android:id="@+id/imagen_borde"
-            android:layout_marginTop="@dimen/dimens_diez"
-            android:layout_marginRight="@dimen/dimens_diez"
-            android:layout_marginLeft="@dimen/dimens_diez"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/height_imagen_receta"
-            android:elevation="@dimen/elevation_fab"
-            android:scaleType="centerCrop"
-            android:src="@drawable/borde"
-            />
-        <TextView
-            android:id="@+id/nombre_receta"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/dimens_diez"
-            android:layout_marginLeft="@dimen/dimens_diez"
-            android:text="@{receta.nombre}"
-            tools:text="Pasta Napolitana"
-            android:layout_below="@id/imagen_receta"
-            android:textColor="#000000"
-            android:textSize="@dimen/tamaño_texto_receta"
-            android:fontFamily="serif"
-            android:textStyle="bold"
-            />
-        <ImageView
-            android:id="@+id/ictipo"
-            android:layout_width="@dimen/tamaño_icono_grid"
-            android:layout_height="@dimen/tamaño_icono_grid"
-            android:src="@drawable/ic_tipo"
-            android:layout_below="@id/nombre_receta"
-            android:layout_marginLeft="@dimen/margin_left_image"
-            />
-        <TextView
-            android:id="@+id/tipo_receta"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/margin_rigth_text"
-            android:layout_marginLeft="@dimen/margin_left_text"
-            android:text="@{receta.tipo}"
-            tools:text="Vegetariana"
-            android:layout_below="@id/nombre_receta"
-            android:layout_toRightOf="@+id/ictipo"
-            android:textColor="@color/colorPrimary"
-            android:textSize="@dimen/tamaño_letra_grid"
-            />
-        <ImageView
-            android:id="@+id/icdificultad"
-            android:layout_width="@dimen/tamaño_icono_grid"
-            android:layout_height="@dimen/tamaño_icono_grid"
-            android:src="@drawable/ic_dificultad"
-            android:layout_below="@id/ictipo"
-            android:layout_marginLeft="@dimen/margin_left_image"
-            />
-        <TextView
-            android:id="@+id/dificultad_receta"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/margin_rigth_text"
-            android:layout_marginLeft="@dimen/margin_left_text"
-            android:text="@{receta.dificultad}"
-            tools:text="Facil"
-            android:layout_below="@id/tipo_receta"
-            android:layout_toRightOf="@+id/icdificultad"
-            android:textColor="#FF0000"
-            android:textSize="@dimen/tamaño_letra_grid"
-            />
-        <ImageView
-            android:id="@+id/ictiempo"
-            android:layout_width="@dimen/tamaño_icono_grid"
-            android:layout_height="@dimen/tamaño_icono_grid"
-            android:src="@drawable/ic_tiempo"
-            android:layout_below="@id/icdificultad"
-            android:layout_marginLeft="@dimen/margin_left_image"
-            />
-        <TextView
-            android:id="@+id/tiempo_receta"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/margin_rigth_text"
-            android:layout_marginLeft="@dimen/margin_left_text"
-            android:text="@{receta.tiempo}"
-            tools:text="45 min"
-            android:layout_below="@id/dificultad_receta"
-            android:layout_toRightOf="@id/ictiempo"
-            android:layout_alignTop="@+id/ictiempo"
-            android:textColor="#ff6d00"
-            android:textSize="@dimen/tamaño_letra_grid"
-            />
-    </RelativeLayout>
+
+
+    <FrameLayout
+        android:layout_width="match_parent" android:layout_height="wrap_content">
+
+        <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+            <RelativeLayout
+            android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="end" >
+                <ImageView
+                    android:id="@+id/imagen_receta"
+                    android:layout_marginTop="@dimen/dimens_diez"
+                    android:layout_marginRight="@dimen/dimens_diez"
+                    android:layout_marginLeft="@dimen/dimens_diez"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/height_imagen_receta"
+                    android:elevation="@dimen/elevation_fab"
+                    app:imgUrl="@{receta.imagen}"
+                    android:scaleType="centerCrop"
+                    />
+                <ImageView
+                    android:id="@+id/imagen_borde"
+                    android:layout_marginTop="@dimen/dimens_diez"
+                    android:layout_marginRight="@dimen/dimens_diez"
+                    android:layout_marginLeft="@dimen/dimens_diez"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/height_imagen_receta"
+                    android:elevation="@dimen/elevation_fab"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/borde"
+                    />
+                <TextView
+                    android:id="@+id/nombre_receta"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/dimens_diez"
+                    android:layout_marginLeft="@dimen/dimens_diez"
+                    android:text="@{receta.nombre}"
+                    tools:text="Pasta Napolitana"
+                    android:layout_below="@id/imagen_receta"
+                    android:textColor="#000000"
+                    android:textSize="@dimen/tamaño_texto_receta"
+                    android:fontFamily="serif"
+                    android:textStyle="bold"
+                    />
+                <ImageView
+                    android:id="@+id/ictipo"
+                    android:layout_width="@dimen/tamaño_icono_grid"
+                    android:layout_height="@dimen/tamaño_icono_grid"
+                    android:src="@drawable/ic_tipo"
+                    android:layout_below="@id/nombre_receta"
+                    android:layout_marginLeft="@dimen/margin_left_image"
+                    />
+                <TextView
+                    android:id="@+id/tipo_receta"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/margin_rigth_text"
+                    android:layout_marginLeft="@dimen/margin_left_text"
+                    android:text="@{receta.tipo}"
+                    tools:text="Vegetariana"
+                    android:layout_below="@id/nombre_receta"
+                    android:layout_toRightOf="@+id/ictipo"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="@dimen/tamaño_letra_grid"
+                    />
+                <ImageView
+                    android:id="@+id/icdificultad"
+                    android:layout_width="@dimen/tamaño_icono_grid"
+                    android:layout_height="@dimen/tamaño_icono_grid"
+                    android:src="@drawable/ic_dificultad"
+                    android:layout_below="@id/ictipo"
+                    android:layout_marginLeft="@dimen/margin_left_image"
+                    />
+                <TextView
+                    android:id="@+id/dificultad_receta"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/margin_rigth_text"
+                    android:layout_marginLeft="@dimen/margin_left_text"
+                    android:text="@{receta.dificultad}"
+                    tools:text="Facil"
+                    android:layout_below="@id/tipo_receta"
+                    android:layout_toRightOf="@+id/icdificultad"
+                    android:textColor="#FF0000"
+                    android:textSize="@dimen/tamaño_letra_grid"
+                    />
+                <ImageView
+                    android:id="@+id/ictiempo"
+                    android:layout_width="@dimen/tamaño_icono_grid"
+                    android:layout_height="@dimen/tamaño_icono_grid"
+                    android:src="@drawable/ic_tiempo"
+                    android:layout_below="@id/icdificultad"
+                    android:layout_marginLeft="@dimen/margin_left_image"
+                    />
+                <TextView
+                    android:id="@+id/tiempo_receta"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/margin_rigth_text"
+                    android:layout_marginLeft="@dimen/margin_left_text"
+                    android:text="@{receta.tiempo}"
+                    tools:text="45 min"
+                    android:layout_below="@id/dificultad_receta"
+                    android:layout_toRightOf="@id/ictiempo"
+                    android:layout_alignTop="@+id/ictiempo"
+                    android:textColor="#ff6d00"
+                    android:textSize="@dimen/tamaño_letra_grid"
+                    />
+            </RelativeLayout>
+    </android.support.v7.widget.CardView>
+    </FrameLayout>
+
 </layout>
