--- a/app/src/main/res/layout/activity_detail_page.xml
+++ b/app/src/main/res/layout/activity_detail_page.xml
@@ -8,86 +8,81 @@
         <variable
             name="receta"
             type="com.example.e2dy.vegetariano_fuerte.models.Receta"/>
-        <variable
-            name="adapter"
-            type="com.example.e2dy.vegetariano_fuerte.adapters.IngredientesAdapter"/>
-        <variable
-            name="onClick"
-            type="android.view.View.OnClickListener"/>
     </data>
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
-    <TextView
-        android:layout_marginTop="@dimen/margin_top_detail"
-        android:id="@+id/nombre_receta"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="@dimen/dimens_diez"
-        android:layout_marginLeft="@dimen/dimens_diez"
-        android:text="@{receta.nombre}"
-        tools:text="Pasta Napolitana"
-        android:textColor="#000000"
-        android:textSize="25dp"
-        android:fontFamily="serif"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        />
-
-
-
-    <RelativeLayout
-        android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="end" >
-        <ImageView
-            android:id="@+id/imagen_receta"
-            android:layout_marginTop="@dimen/dimens_diez"
-            android:layout_marginRight="@dimen/dimens_diez"
-            android:layout_marginLeft="@dimen/dimens_diez"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="#ffffff"
+        >
+        <TextView
+            android:layout_marginTop="@dimen/margin_top_detail"
+            android:id="@+id/nombre_receta"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/height_detail_image"
-            android:elevation="@dimen/elevation_fab"
-            app:imgUrl="@{receta.imagen}"
-            android:scaleType="centerCrop"
-
-            />
-        <ImageView
-            android:id="@+id/imagen_borde"
-            android:layout_marginTop="@dimen/dimens_diez"
-            android:layout_marginRight="@dimen/dimens_diez"
-            android:layout_marginLeft="@dimen/dimens_diez"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/height_detail_image"
-            android:elevation="@dimen/elevation_fab"
-            android:scaleType="centerCrop"
-            android:src="@drawable/borde"
-            />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingTop="@dimen/margin_top_detail"
-            android:id="@+id/linear_ly_iconos"
             android:layout_marginRight="@dimen/dimens_diez"
             android:layout_marginLeft="@dimen/dimens_diez"
-            >
+            android:text="@{receta.nombre}"
+            tools:text="Pasta Napolitana"
+            android:textColor="#000000"
+            android:textSize="25dp"
+            android:fontFamily="serif"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            />
 
-            //LLY TIPO
+
+
+        <RelativeLayout
+            android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="end" >
+            <ImageView
+                android:id="@+id/imagen_receta"
+                android:layout_marginTop="@dimen/dimens_diez"
+                android:layout_marginRight="@dimen/dimens_diez"
+                android:layout_marginLeft="@dimen/dimens_diez"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/height_detail_image"
+                android:elevation="@dimen/elevation_fab"
+                app:imgUrl="@{receta.imagen}"
+                android:scaleType="centerCrop"
+
+                />
+            <ImageView
+                android:id="@+id/imagen_borde"
+                android:layout_marginTop="@dimen/dimens_diez"
+                android:layout_marginRight="@dimen/dimens_diez"
+                android:layout_marginLeft="@dimen/dimens_diez"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/height_detail_image"
+                android:elevation="@dimen/elevation_fab"
+                android:scaleType="centerCrop"
+                android:src="@drawable/borde"
+                />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
             <LinearLayout
-                android:layout_width="@dimen/lly_tipo"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginLeft="@dimen/separacion_text_detail"
-                android:layout_marginRight="@dimen/separacion_text_detail"
+                android:orientation="horizontal"
+                android:paddingTop="@dimen/margin_top_detail"
+                android:id="@+id/linear_ly_iconos"
+                android:layout_marginRight="@dimen/dimens_diez"
+                android:layout_marginLeft="@dimen/dimens_diez"
                 >
-                     //ICONO DEL TIPO
+
+                //LLY TIPO
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="@dimen/separacion_text_detail"
+                    android:layout_marginRight="@dimen/separacion_text_detail"
+                    >
+                    //ICONO DEL TIPO
                     <ImageView
                         android:id="@+id/ictipo"
                         android:layout_width="@dimen/tamaño_ic_detail"
@@ -96,30 +91,30 @@
                         android:layout_gravity="center"
                         />
                     //TEXTO DEL TIPO
-                        <TextView
+                    <TextView
                         android:id="@+id/tipo_receta"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@{receta.tipo}"
                         tools:text="Vegetariana"
                         android:textColor="@color/colorPrimary"
-                        android:textSize="@dimen/text_size_detail"
+                        android:textSize="@dimen/tamaño_letra_detail"
                         android:layout_below="@+id/ictipo"
                         android:layout_gravity="center"
-                         android:textStyle="bold"
+                        android:textStyle="bold"
+                        />
                     />
-                />
-            </LinearLayout>
+                </LinearLayout>
 
-            //LLY TIEMPO
-            <LinearLayout
-                android:layout_width="@dimen/width_linearlay"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginLeft="@dimen/separacion_text_detail"
-                android:layout_marginRight="@dimen/separacion_text_detail"
-                >
-                   //ICONO DE TIEMPO
+                //LLY TIEMPO
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="@dimen/separacion_text_detail"
+                    android:layout_marginRight="@dimen/separacion_text_detail"
+                    >
+                    //ICONO DE TIEMPO
                     <ImageView
                         android:id="@+id/ictiempo"
                         android:layout_width="@dimen/tamaño_ic_detail"
@@ -135,20 +130,20 @@
                         android:text="@{receta.tiempo}"
                         tools:text="45 min"
                         android:textColor="@color/colorPrimary"
-                        android:textSize="@dimen/text_size_detail"
+                        android:textSize="@dimen/tamaño_letra_detail"
                         android:layout_gravity="center"
                         android:textStyle="bold"
-                    />
-            </LinearLayout>
+                        />
+                </LinearLayout>
 
-            //LLY DIFICULTAD
-            <LinearLayout
-                android:layout_width="@dimen/width_linearlay"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginLeft="@dimen/separacion_text_detail"
-                android:layout_marginRight="@dimen/separacion_text_detail"
-                >
+                //LLY DIFICULTAD
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="@dimen/separacion_text_detail"
+                    android:layout_marginRight="@dimen/separacion_text_detail"
+                    >
                     //ICONO DE DIFICULTAD
                     <ImageView
                         android:id="@+id/icdificultad"
@@ -156,59 +151,60 @@
                         android:layout_height="@dimen/tamaño_ic_detail"
                         android:src="@drawable/ic_dificultad"
                         android:layout_gravity="center"
-                    />
+                        />
                     //TEXTO DIFICULTAD
                     <TextView
                         android:id="@+id/dificultad_receta"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@{receta.dificultad}"
-                        tools:text="Dificil"
+                        tools:text="Facil"
                         android:textColor="@color/colorPrimary"
-                        android:textSize="@dimen/text_size_detail"
+                        android:textSize="@dimen/tamaño_letra_detail"
                         android:layout_gravity="center"
                         android:textStyle="bold"
-                    />
-            </LinearLayout>
+                        />
+                </LinearLayout>
 
-            //LLY CATEGORIA
-            <LinearLayout
-                android:layout_width="@dimen/llt_cat"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginLeft="@dimen/separacion_text_detail"
-                android:layout_marginRight="@dimen/separacion_text_detail"
-                >
-                //ICONO DE CATEGORIA
-                <ImageView
-                    android:id="@+id/iccategoria"
-                    android:layout_width="@dimen/tamaño_ic_detail"
-                    android:layout_height="@dimen/tamaño_ic_detail"
-                    android:src="@drawable/ic_categoria"
-                    android:layout_gravity="center"
-                />
-                //TEXTO DE CATEGORIA
-                <TextView
-                    android:id="@+id/categoria_receta"
+                //LLY CATEGORIA
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{receta.categoria}"
-                    tools:text="Platos principales"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="@dimen/text_size_detail"
-                    android:layout_gravity="center"
-                    android:textAlignment="center"
-                    android:textStyle="bold"
-                    />
-            </LinearLayout>
+                    android:orientation="vertical"
+                    android:layout_marginLeft="@dimen/separacion_text_detail"
+                    android:layout_marginRight="@dimen/separacion_text_detail"
+                    >
+                    //ICONO DE CATEGORIA
+                    <ImageView
+                        android:id="@+id/iccategoria"
+                        android:layout_width="@dimen/tamaño_ic_detail"
+                        android:layout_height="@dimen/tamaño_ic_detail"
+                        android:src="@drawable/ic_categoria"
+                        android:layout_gravity="center"
+                        />
+                    //TEXTO DE CATEGORIA
+                    <TextView
+                        android:id="@+id/categoria_receta"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{receta.tiempo}"
+                        tools:text="Platos principales"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="@dimen/tamaño_letra_detail"
+                        android:layout_gravity="center"
+                        android:textStyle="bold"
+                        />
+                </LinearLayout>
 
-            //LLY PERSONAS
+                //LLY PERSONAS
 
-            <LinearLayout
-                android:layout_width="@dimen/width_linearlay"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="@dimen/separacion_text_detail"
+                    android:layout_marginRight="@dimen/separacion_text_detail"
+                    >
                     //ICONO DE PERSONAS
                     <ImageView
                         android:id="@+id/icpersonas"
@@ -216,56 +212,47 @@
                         android:layout_height="@dimen/tamaño_ic_detail"
                         android:src="@drawable/ic_personas"
                         android:layout_gravity="center"
-                    />
+                        />
                     //TEXTO PERSONAS
                     <TextView
                         android:id="@+id/personas_receta"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@{receta.personas}"
+                        android:text="@{receta.tiempo}"
                         tools:text="4"
                         android:textColor="@color/colorPrimary"
-                        android:textSize="@dimen/text_size_detail"
+                        android:textSize="@dimen/tamaño_letra_detail"
                         android:layout_gravity="center"
                         android:textStyle="bold"
-                    />
+                        />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="@dimen/separacion_text_detail"
+                    android:layout_marginRight="@dimen/separacion_text_detail"
+                    >
+                    <Button
+                        android:id="@+id/btn_unfavorite"
+                        android:layout_width="@dimen/tamaño_ic_detail"
+                        android:layout_height="@dimen/tamaño_ic_detail"
+                        android:background="#ffffff"
+                        android:foreground="@drawable/ic_unfavorite"
+                        />
+                    <TextView
+                        android:id="@+id/textofavorito"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Favorito"
+                        tools:text="FAV"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="@dimen/tamaño_letra_detail"
+                        android:layout_gravity="center"
+                        android:textStyle="bold"
+                        />
+                </LinearLayout>
             </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:orientation="vertical"
-        >
-
-
-        <ListView
-            android:id="@+id/list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:setAdapter="@{adapter}"
-            />
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Añadir al shopping List"
-            app:setOnClickListener="@{onClick}"
-            />
-
-
-    </LinearLayout>
-
-
-
-
-
-
-</LinearLayout>
 </layout>
-
