--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,11 +21,12 @@
     <dimen name="small">10dp</dimen>
     <dimen name="margin_top_detail">20dp</dimen>
     <dimen name="separacion_ic_detail">20dp</dimen>
-    <dimen name="separacion_text_detail">8dp</dimen>
+    <dimen name="separacion_text_detail">7dp</dimen>
     <dimen name="tamaño_ic_detail">25dp</dimen>
     <dimen name="width_linearlay">50dp</dimen>
     <dimen name="lly_tipo">80dp</dimen>
     <dimen name="llt_cat">72dp</dimen>
     <dimen name="height_detail_image">250dp</dimen>
     <dimen name="text_size_detail">14dp</dimen>
+    <dimen name="tamaño_letra_detail">13dp</dimen>
 </resources>
