--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,17 +11,29 @@
             type="android.view.View.OnClickListener"/>
     </data>
 
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
+            <ImageView
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:src="@drawable/icono"
+                android:layout_gravity="center"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="10dp"
+                />
+        <TableLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:gravity="center"
         android:stretchColumns="*"
         >
-
         <EditText
             android:id="@+id/usr"
             android:hint="@string/login_usr"
@@ -36,6 +48,7 @@
             />
 
         <TableRow>
+
             <Button
                 android:id="@+id/btn_reg"
                 style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
@@ -49,6 +62,6 @@
                 app:setOnClickListener="@{onClick}"
                 />
         </TableRow>
-
     </TableLayout>
+        </LinearLayout>
 </layout>
