--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,6 +11,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#ffffff"
         >
 
     <android.support.v7.widget.RecyclerView
@@ -19,8 +20,6 @@
         android:layout_height="match_parent"
         app:setAdapter="@{adapter}"
         >
-
-
     </android.support.v7.widget.RecyclerView>
     </FrameLayout>
 </layout>
