--- a/app/src/main/res/layout/template_receta.xml
+++ b/app/src/main/res/layout/template_receta.xml
@@ -16,7 +16,7 @@
 
         <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="260dp">
 
             <RelativeLayout
             android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="end" >
