--- a/app/src/main/res/menu/menu_filtros.xml
+++ b/app/src/main/res/menu/menu_filtros.xml
@@ -10,52 +10,17 @@
         app:showAsAction="always">
         <menu>
             <item
-                android:id="@+id/filtro_categoria"
-                android:title="@string/category">
-                <menu>
-                    <item
-                        android:title="@string/appetizers"/>
-                    <item
-                        android:title="@string/bread_and_cookies"/>
-                    <item
-                        android:title="@string/desserts"/>
-                    <item
-                        android:title="@string/main_dishes"/>
-                    <item
-                        android:title="@string/pastas"/>
-                    <item
-                        android:title="@string/soups"/>
-                    <item
-                        android:title="@string/salads"/>
-                </menu>
-            </item>
-
-            <item
                 android:id="@+id/filtro_tipo"
                 android:title="@string/type">
                 <menu>
                     <item
+                        android:id="@+id/filtro_vegetariana"
                         android:title="@string/vegetarian"/>
                     <item
+                        android:id="@+id/filtro_vegana"
                         android:title="@string/vegan"/>
                 </menu>
             </item>
-
-            <item
-                android:id="@+id/filtro_dificultad"
-                android:title="@string/difficulty">
-                <menu>
-                    <item
-                        android:title="@string/easy"/>
-                    <item
-                        android:title="@string/medium"/>
-                    <item
-                        android:title="@string/hard"/>
-                </menu>
-            </item>
-
-
-
         </menu>
     </item>
 </menu>
